# uvclientserver

./: CMakeLists.txt  README.md
src/client/: client.cpp  client.h  main.cpp
src/server/: main.cpp  server.cpp  server.h  server_client.cpp  server_client.h
src/utility/: stack.h
src/uv_network/: parser.h  protocol.cpp  protocol.h  uv_buffers.cpp  uv_buffers.h  uv_network.cpp  uv_network.h  uv_tcp_handle.cpp  uv_tcp_handle.h
test/: CMakeLists.txt  unittest.cpp
test/utility/: capture_stdout.h
